--- a/app/views/bills/index.html.erb
+++ b/app/views/bills/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Bills#index</h1>
-<p>Find me in app/views/bills/index.html.erb</p>
+<h1>Billboards</h1>
+<hr />
+<% @bills.each do |bill| %>
+  <p><%= bill.name %></p>
+  <%= link_to 'View', bill %>
+  <% end %>
