--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
   </head>
 
   <body>
+  <%= link_to 'All Artists', artists_path %>
+  <%= link_to 'All Billboards', bills_path %>
     <%= yield %>
   </body>
 </html>
